fix text alignment.

--- a/src/styles/FreshBlog.css
+++ b/src/styles/FreshBlog.css
@@ -34,6 +34,10 @@
   font-weight: bold;
 }
 
+.blogtext {
+  padding: 3%;
+}
+
 .bottomlinktoblog{
   text-align: center;
   margin: 4% 0 4% 0;
